--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - '**/*'
+    - build/**/*
   base-directory: 'build'
 
 cache:
